--- a/index.html
+++ b/index.html
@@ -1,3 +1,251 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Joel Andy</title>
+	<link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
+</head>
+<body >
 
-hola
-aaaa
+<!-- Header -->
+<div class="header">
+  <h1>Hola soy Joel Andy, Programador</h1>
+  <h3>Algunos de proyectos : </h3>
+</div>
+
+
+
+<div class="container">
+
+<div class='item' >
+
+<div class='titulo'>
+
+<h2>Stilo</h2>
+<h3>Aplicacion de belleza para Android y IOS</h3></div>
+ 
+
+<a href='https://play.google.com/store/apps/details?id=io.codigito.mylookexpress'><img src="https://lanzarotegolfresort.com/lztic/app/es-google-play.png" alt=""></a>
+
+<a href='https://itunes.apple.com/us/app/stilo/id1340597585?mt=8'><img src="https://shopily.s3.amazonaws.com/uploads/stores/1973/app-store-coupon-my-new.png" alt=""></a>
+
+
+
+</div>
+
+<div class='item' >
+
+	<div class='titulo'>
+
+<h2>Stilo Profesionales</h2>
+<h3>Aplicacion  para trabajar en Stilo para Android y IOS</h3></div>
+
+<a href='https://play.google.com/store/apps/details?id=io.codigito.mylookexpress'><img src="https://lanzarotegolfresort.com/lztic/app/es-google-play.png" alt=""></a>
+
+
+</div>
+
+<div class='item'  >
+
+	<div class='titulo'>
+<h2>CFP International</h2>
+<h3>Aplicacion de registro de Citas de Negocios de Seguros para Android y IOS
+user root pass rosa0000</h3></div>
+
+
+<a href='https://play.google.com/store/apps/details?id=io.codigito.mylookexpress'><img src="https://lanzarotegolfresort.com/lztic/app/es-google-play.png" alt=""></a>
+
+<a href='https://play.google.com/store/apps/details?id=com.capital.peru'><img src="https://shopily.s3.amazonaws.com/uploads/stores/1973/app-store-coupon-my-new.png" alt=""></a>
+
+
+</div>
+
+<div class='item'  >
+
+	<div class='titulo'>
+<h2>CCF Mobile</h2>
+<h3>Estadisticas y Monitoreo de Call Center</h3></div>
+
+
+
+<a href='https://searchman.com/ios/app/us/1339260332/en/contact-center-falabella-sac/ccf-mobile/'><img src="https://shopily.s3.amazonaws.com/uploads/stores/1973/app-store-coupon-my-new.png" alt=""></a>
+
+
+
+
+</div>
+
+<div class='item' >
+
+		<div class='titulo'>
+<h2>Calculadora de Sueldo Interpretia</h2>
+
+<a href='https://play.google.com/store/apps/details?id=com.calculadora.interpetria'><img src="https://lanzarotegolfresort.com/lztic/app/es-google-play.png" alt=""></a></div>
+
+
+
+</div>
+
+<div class='item' >
+
+		<div class='titulo'>
+<h2>Diloo</h2>
+<h3>Sistema de envio de SMS y Voz Masivo</h3></div>
+
+
+
+
+</div>
+
+<div class='item' >
+
+
+
+
+		<div class='titulo'>
+<h2>Sistema de CallCenter</h2>
+<h3>Integracion con Asterisk</h3></div>
+
+
+
+</div>
+
+<div class='item' >
+
+		<div class='titulo'>
+<h2>Choose & BookIt</h2>
+<h3>Sistema de Reserva de habitacion de hoteles</h3></div>
+
+
+<a style='padding:12px;' href='http://ec2-18-221-248-184.us-east-2.compute.amazonaws.com/cbi-fe/dist/'>Link</a>
+
+
+</div>
+
+
+</div>
+</div>
+<h1>Conocimientos</h1>
+<div class='container_d'>
+<div class='item_d' >
+
+
+
+Python
+
+</div>
+
+
+<div class='item_d'>
+Django
+
+</div>
+
+<div class='item_d' >
+Odoo
+
+</div>
+
+<div class='item_d' >
+Django
+
+</div>
+
+<div class='item_d' >
+Sckity Learn
+
+</div>
+
+
+<div class='item_d' >
+Keras
+
+</div>
+
+<div class='item_d' >
+Angular
+
+</div>
+<div class='item_d' >
+Ionic
+
+</div>
+<div class='item_d' >
+ReactJS
+
+</div>
+
+</div>
+
+
+	
+</body>
+</html>
+
+
+
+
+<style type="text/css">
+
+body{
+
+    font-family: 'Rubik';
+    color: #e2c9c9;
+    background-image: linear-gradient(to bottom right, #e43b3b, #2b76ff);
+
+}
+.container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  
+  grid-gap: 5px;
+
+}
+
+.container_d{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  
+  grid-gap: 5px;
+  height: 130px;
+
+
+}
+img{
+	width: 100%;
+	    max-width: 8em;
+
+
+}
+.item {
+
+    text-align: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    color: #d6d6d6;
+    border-radius: 13px;
+    border: 1px solid #979ad6;
+      transform: rotateX(360deg);
+  transition: 1s;
+}
+.item_d{
+
+text-align: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    color: #000;
+    padding: 34px;
+
+}
+
+
+.titulo{
+ grid-column: 1 / span 2;
+}
+
+
+
+</style>
+
+
+</style>
